--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "homepage": "https://github.com/MariaEmiliaCastro/projeto16-shortly#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "mongodb": "^4.8.1",
-    "nodemon": "^2.0.19"
+    "nanoid": "^4.0.0",
+    "nodemon": "^2.0.19",
+    "pg": "^8.7.3"
   }
 }
