--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongodb": "^4.8.1",
     "nanoid": "^4.0.0",
     "nodemon": "^2.0.19",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "uuid": "^8.3.2"
   }
 }
